2008-08-28  David Hyatt  <hyatt@apple.com>

Reviewed by Darin

        https://bugs.webkit.org/show_bug.cgi?id=18091

        font-size should be animatable using -webkit-transition.

        * page/AnimationController.cpp:
        (WebCore::AnimationControllerPrivate::ensurePropertyMap):
        * rendering/style/RenderStyle.h:
        (WebCore::RenderStyle::setFontSize):



Canonical link: https://commits.webkit.org/28378@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35975 268f45cc-cd09-0410-ab3c-d52691b4dbfc